# PyTorch-VAE

./: experiment.py  experiment_ad.py  pyproject.toml  run.py
configs/: vae.cifar.res.yaml  vae.cifar.yaml  vae.cifar10.yaml  vae.mnist.yaml  vae.mnistb.yaml  vae.vol.yaml  vqvae.cifar.yaml  vqvae.mnist.yaml  vqvae.mnistb.yaml  vqvae3d.anomaly.mnistb.yaml  vqvae3d.mnistb.yaml
models/: __init__.py  vae3d.py  vanilla_vae.py  vq_vae3d.py
